--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -32,6 +32,54 @@
             
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-   </div>
+        <table class="table table-hover table-bordered mt-3">
+            
+            <thead>
+                <tr>
+                <th scope="col">#</th>
+                <th scope="col"  >Email</th>
+                <th scope="col">UserName</th>
+                <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% user.forEach(function(item,index){ %>
+            
+        
+                    <tr>
+                    <th scope="row"><%= index + 1 %></th>
+                    <td><%= item.email %></td>
+                    <td><%= item.username %></td>
+                    <td>
+                        <form action="/update_user/<%= item.id %>" method="GET"><button type="submit" class="btn btn-warning">Update</button></form>
+                        <form action="/delete_user/<%= item.id %> " method="POST"><button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Delete</button></form>
+                    </td>
+                    </tr>
+                    
+               <% }) %>
+            </tbody>
+        </table>
+    </div>
+    <!-- Modal
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete User</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Do you want to delete ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Delete</button>
+      </div>
+    </div>
+  </div>
+</div> -->
+<script>
+    
+</script>
 </body>
 </html>
